--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,18 @@
 {
     "name": "yushkevichv/pdf-cad-reader",
+    "description": "Parse PDF CAD files for get index meta info and decoded stream vector data",
     "type": "library",
+    "require": {
+        "tecnickcom/tcpdf": "^6.2",
+        "ext-zlib": "*",
+        "php": "7.0"
+    },
     "license": "MIT",
     "authors": [
         {
-            "name": "Yushkevich Vitaly",
+            "name": "Vitaliy Yushkevich",
             "email": "yushkevichv@gmail.com"
         }
     ],
-    "require": {
-        "php": "^7.4",
-        "tecnickcom/tcpdf": "~6.0",
-        "ext-zlib": "*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Yushkevichv\\PDFCadReader\\": "src"
-        }
-    }
+    "minimum-stability": "dev"
 }
