--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "tecnickcom/tcpdf": "^6.2",
         "ext-zlib": "*",
-        "php": "7.0"
+        "php": "^7.0"
     },
     "license": "MIT",
     "authors": [
