--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         "ext-zlib": "*",
         "php": "^7.0"
     },
+    "autoload": {
+        "psr-4": {
+            "Yushkevichv\\PDFCadReader\\": "src"
+        }
+    },
     "license": "MIT",
     "authors": [
         {
