--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,22 @@
         "ext-zlib": "*",
         "php": "^7.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.0"
+    },
     "autoload": {
         "psr-4": {
             "Yushkevichv\\PDFCadReader\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Yushkevichv\\PDFCadReader\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "license": "MIT",
     "authors": [
