--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "mockery/mockery": "^1.2.3"
     },
     "autoload": {
         "psr-4": {
