--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "tecnickcom/tcpdf": "^6.2",
         "ext-zlib": "*",
-        "php": "^7.1"
+        "php": "^7.1",
+        "phenx/php-font-lib": "^0.5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
